<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.kystatham.nytimessearch.activities.FilterActivity"
    tools:showIn="@layout/activity_filter">

    <TextView
        android:id="@+id/tvSort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="80dp"
        android:layout_marginTop="75dp"
        android:text="@string/sort"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:textColor="@android:color/black" />

    <Spinner
        android:id="@+id/spnSort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/sort_orders_array"
        android:layout_alignBaseline="@+id/tvSort"
        android:layout_alignBottom="@+id/tvSort"
        android:layout_toEndOf="@+id/tvSort"
        android:layout_toRightOf="@+id/tvSort" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:onClick="onFilterSave"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/tvNewsDesk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvSort"
        android:layout_alignStart="@+id/tvSort"
        android:layout_below="@+id/spnSort"
        android:layout_marginTop="20dp"
        android:text="@string/news_desk"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:textColor="@android:color/black" />

    <CheckBox
        android:id="@+id/cbArts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tvNewsDesk"
        android:layout_toEndOf="@+id/btnSave"
        android:text="@string/arts"
        android:onClick="onCheckboxClicked"
        android:layout_alignLeft="@+id/spnSort"
        android:layout_alignStart="@+id/spnSort" />

    <CheckBox
        android:id="@+id/cbFashionStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cbArts"
        android:layout_alignStart="@+id/cbArts"
        android:layout_below="@+id/cbArts"
        android:text="@string/fashion_style"
        android:onClick="onCheckboxClicked"/>

    <CheckBox
        android:id="@+id/cbSports"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cbFashionStyle"
        android:layout_alignStart="@+id/cbFashionStyle"
        android:layout_below="@+id/cbFashionStyle"
        android:text="@string/sports"
        android:onClick="onCheckboxClicked"/>

    <TextView
        android:id="@+id/tvBeginDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/spnSort"
        android:layout_alignLeft="@+id/tvSort"
        android:layout_alignStart="@+id/tvSort"
        android:layout_marginBottom="26dp"
        android:text="@string/begin_date"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/etBeginDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvBeginDate"
        android:layout_alignBottom="@+id/tvBeginDate"
        android:layout_alignLeft="@+id/spnSort"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignStart="@+id/spnSort"
        android:ems="10"
        android:inputType="date"
        android:textAppearance="@android:style/TextAppearance.Material.Medium.Inverse"
        android:onClick="showDatePickerDialog"/>
</RelativeLayout>
